--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -8,6 +8,7 @@
     width: 100%;
     background-color: #000;
     padding: 0 16px;
+    z-index: 100;
 }
 #header .menu .container{
     width: 100%;
