--- a/src/components/Menu/menu.css
+++ b/src/components/Menu/menu.css
@@ -3,13 +3,14 @@
 }
 
 #header .menu{
+    top: 0;
+    left: 0;
     position: fixed;
-    z-index: 300;
     height: 54px;
     width: 100%;
     background-color: #000;
     padding: 0 16px;
-    z-index: 100;
+    z-index: 300;
 }
 #header .menu .container{
     width: 100%;
