--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,6 +1,3 @@
-#home{
-    height: 200vh;
-}
 
 #home .homePrints{
     padding: 20px 0;
@@ -22,6 +19,70 @@
     font-size: 24px;
 }
 
+#home .homePrints .homeDesc{
+    width: 100%;
+    max-width: 900px;
+    padding: 40px 15px;
+    text-align: center;
+}
+
+#home .homePrints .homeDesc .homeDescTitle{
+    font-weight: 500;
+    font-size: 20px;
+    margin-bottom: 12px;
+}
+#home .homePrints .homeDesc .homeDescSubtitle{
+    font-weight: 400;
+    font-size: 12px;
+}
+
+#home .homeFeatures{
+    background-color: #000;
+    width: 100%;
+    padding: 70px 50px;
+}
+
+#home .homeFeatures .homeFeaturesContainer{
+    width: 100%;
+    max-width: 1000px;
+    margin: auto;
+    display: grid;
+    grid-template-rows: repeat(3,1fr);
+    gap: 100px;
+}
+
+#home .homeFeatures .homeFeaturesContainer .feature{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #fff;
+    text-align: center;
+}
+
+#home .homeFeatures .homeFeaturesContainer .feature .featureImg{
+    background-color: #fff;
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 24px;
+}
+
+#home .homeFeatures .homeFeaturesContainer .feature .featureImg img{
+    width: 40px;
+}
+#home .homeFeatures .homeFeaturesContainer .feature .featureTitle{
+    font-size: 24px;
+    font-weight: 700;
+    margin-bottom: 12px;
+}
+#home .homeFeatures .homeFeaturesContainer .feature .featureSubtitle{
+    font-size: 14px;
+    font-weight: 300;
+}
 
 @media (min-width: 765px) {
 
@@ -35,5 +96,13 @@
 
     #home .homePrintsTitle p{
         font-size: 64px;
+    }
+
+    #home .homePrints .homeDesc .homeDescTitle{
+        font-size: 40px;
+        margin-bottom: 24px;
+    }
+    #home .homePrints .homeDesc .homeDescSubtitle{
+        font-size: 24px;
     }
 }
