--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -44,9 +44,11 @@
 
 #home .homeFeatures .homeFeaturesContainer{
     width: 100%;
-    max-width: 1000px;
+    max-width: 1200px;
     margin: auto;
     display: grid;
+    justify-items: center;
+    align-items: flex-start;
     grid-template-rows: repeat(3,1fr);
     gap: 100px;
 }
@@ -84,6 +86,37 @@
     font-weight: 300;
 }
 
+#home .homeContact{
+    width: 100%;
+    padding: 0 50px;
+    background: url('../../assets/contactanos.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 320px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#home .homeContact button{
+    width: 100%;
+    max-width: 355px;
+    margin: auto;
+    border-radius: 40px;
+    border: none;
+    padding: 14px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: #000;
+    color: #fff;
+}
+#home .homeContact button span{
+    font-size: 16px;
+}
+
 @media (min-width: 765px) {
 
     #home .homePrints{
@@ -103,6 +136,19 @@
         margin-bottom: 24px;
     }
     #home .homePrints .homeDesc .homeDescSubtitle{
+        font-size: 24px;
+    }
+
+    #home .homeFeatures .homeFeaturesContainer{
+        grid-template-rows: repeat(1,1fr);
+        grid-template-columns: repeat(3,1fr);
+    }
+
+    #home .homeContact{
+        height: 380px;
+    }
+
+    #home .homeContact button span{
         font-size: 24px;
     }
 }
