--- a/src/pages/nosotros/nosotros.css
+++ b/src/pages/nosotros/nosotros.css
@@ -30,3 +30,27 @@
     line-height: 40px;
     margin-bottom: 60px;
 }
+
+
+@media (max-width: 765px) {
+
+
+    .imgContainer img{
+
+        width: 360px;
+        
+    }
+
+    .textoContainer h3{
+        font-size: 24px;
+        font-weight: bold;
+        margin-bottom: 40px;
+    }
+    
+    .textoContainer p{
+        width: 80%;
+        font-size: 14px;
+        line-height: 40px;
+        margin-bottom: 60px;
+    }
+}
