--- a/src/pages/contact/contact.css
+++ b/src/pages/contact/contact.css
@@ -2,23 +2,13 @@
     padding: 50px 0;
 }
 
-#contacto .contactoBanner{
-    width: 100%;
-    overflow: hidden;
-    margin-bottom: 32px;
-}
-
-#contacto .contactoBanner img{
-    width: 140%;
-    left: -20%;
-    position: relative;
-}
 
 #contacto .contactoContainer{
     width: 100%;
     max-width: 570px;
     margin: auto;
     padding: 0 15px;
+    margin-top: 30px;
 }
 #contacto .contactoContainer input{
     width: 100%;
@@ -62,14 +52,6 @@
 
 @media (min-width: 765px) {
 
-    #contacto .contactoBanner{
-        margin-bottom: 70px;
-    }
-
-    #contacto .contactoBanner img{
-        width: 100%;
-        left: 0;
-    }
 
     #contacto .contactoContainer input{
         font-size: 20px;
