--- a/src/components/Cards/contenedorInfo.css
+++ b/src/components/Cards/contenedorInfo.css
@@ -11,11 +11,17 @@
 }
 .contenedorInfoImagen{
     width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 
 .contenedorInfoImagenes{
     display: flex;
+}
+.contenedorInfoImagenes img{
+    height: 120px;
 }
 
 .contenedorInfoInformacion{
