--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -6,8 +6,9 @@
 
 .contenedorInfo{
     width: 100vw;
-    height: 500px;
- 
+    height: 100%;
+    margin-top: 70px;
+    margin-bottom: 70px;
 }
 .bannerMedio{
     width: 100vw;
@@ -36,6 +37,7 @@
     transition: transform .3s ease-in-out;
     margin-top: 50px;
     margin-bottom: 60px;
+    cursor: pointer;
 }
 
 
@@ -47,4 +49,10 @@
 
 .contenedorBotonInferior button{
     font-size: 16px;
+}
+
+@media (max-width:765px){
+    .contenedorInfo{
+        height: 1100px;
+    }
 }
