--- a/src/pages/item/item.css
+++ b/src/pages/item/item.css
@@ -117,6 +117,14 @@
     border: none;
 }
 
+#item a{
+    color: #fff;
+    text-decoration: none;
+}
+#item button{
+    cursor: pointer;
+}
+
 #item .itemContainer .itemContainerBody button span {
     color: #fff;
     text-transform: uppercase;
@@ -179,6 +187,10 @@
 
     #item .itemContainer .itemContainerBody button span {
         font-size: 24px;
+    }
+    #item a{
+        color: #fff;
+        text-decoration: none;
     }
 
     #item .itemBanner {
