--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -113,11 +113,13 @@
     background-color: #000;
     color: #fff;
     transition: transform .3s ease-in-out;
+    cursor: pointer;
 }
 #home .homeContact a{
     width: 240px;
     color: #fff;
     text-decoration: none;
+ 
 }
 
 #home .homeContact button:hover{
